This is third commit for this project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=minibank
+
+logging.config=C:/Users/MSI/Desktop/rest/src/main/resources/log4j2.xml
