--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=minibank
 
+spring.data.mongodb.auto-index-creation=true
+
 logging.config=C:/Users/MSI/Desktop/rest/src/main/resources/log4j2.xml
